Changes for 3.4.12rc1

New features:

Bug fixes:
..F....... [ZBX-9236] fixed timeselector period used to select 'all' values of particular item (miks)
...G...... [ZBX-13393] fixed agent compilation error on AlphaServer Tru64 5.1B (Andris)
..F....... [ZBX-13165] fixed Y-axis small value gradation issue in graphs (Ivo)
..F....... [ZBX-14575] fixed Norwegian locale key for windows (vmurzins)
.......PS. [ZBX-14566] fixed possible data loss due to MariaDB server restart (vso)
.......PS. [ZBX-13010] fixed crash of poller processes in ODBC checks, simplified code (Andris, wiper)
....I..... [ZBX-14370] fixed deleting of files after compiling a program (make clean) for Solaris (MVekslers)
..F....... [ZBX-14519] fixed displaying timeline points of days in Problems widget (vasilijs)
..F....... [ZBX-14491] fixed link "show value mappings", which leads to no permission page (vasilijs)
........S. [ZBX-12380] improved function parameter parsing for trigger functions (MVekslers)
..F....... [ZBX-13641] disabled preprocessing update for discovered items (vasilijs)
A......... [ZBX-13732] fixed status change for linked template items through parent template if host assigned (agriscenko)
..F....... [ZBX-14432] removed redundant code and improved performance in event details screen (miks)
........S. [ZBX-14410] improved error message handling in zbx_function_find() (MVekslers)
........S. [ZBX-14500] fixed crash when reporting unknown triggers and using $1-$9 macros at the same time (vso)
..F....... [ZBX-12104] added limit ZBX_HISTORY_PERIOD for {ITEM.VALUE} macro resolving in trigger name (gcalenko)
..F....... [ZBX-14402] fixed internal item parameter that does not match documentation (vasilijs)

--------------------------------------------------------------------------------
Changes for 3.4.11

New features:
A.F....... [ZBX-1357] added and enabled Norwegian translation to be displayed by default (zalex_ua)