@@ -3,6 +3,7 @@ Changes for 3.4.12rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-14548] fixed the disk usage counters reading for ESX/ESXi hosts (MVekslers)
 ..F....... [ZBX-9236] fixed timeselector period used to select 'all' values of particular item (miks)
 ...G...... [ZBX-13393] fixed agent compilation error on AlphaServer Tru64 5.1B (Andris)
 ..F....... [ZBX-13165] fixed Y-axis small value gradation issue in graphs (Ivo)
@@ -1295,6 +1296,7 @@ Changes for 3.0.20rc1
 New features:
 
 Bug fixes:
+........S. [ZBX-14548] fixed the disk usage counters reading for ESX/ESXi hosts (MVekslers)
 ..F....... [ZBX-9236] fixed timeselector period used to select 'all' values of particular item (miks)
 ...G...... [ZBX-13393] fixed agent compilation error on AlphaServer Tru64 5.1B (Andris)
 .......PS. [ZBX-14566] fixed possible data loss due to MariaDB server restart (vso)
